deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprints-app
  template:
    metadata:
      labels:
        app: sprints-app
    spec:
      containers:
        - name: sprints
          image: <IMAGE-NAME>
          ports:
            - containerPort: 5002
          command: ["python", "app.py"]
          livenessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 5002
            initialDelaySeconds: 5
            periodSeconds: 5
