statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statfulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-statfulset
  serviceName: mysql-service    
  template:
    metadata:
      labels:
        app: mysql-statfulset
    spec:
      containers:
        - name: mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-queries
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-queries
          configMap:
            name: mysql-queries-configmap
