mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-database
spec:
  selector:
    app: mysql-statfulset
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
